tests/machine/x/cpp/in_operator.mochi.error
line 14: ../../../tests/machine/x/cpp/in_operator.mochi.cpp:14:33: error: exponent has no digits
   14 |     print((std::find(2.begin(), 2.end(), xs) != 2.end()));
      |                                 ^~~~~
../../../tests/machine/x/cpp/in_operator.mochi.cpp:14:49: error: exponent has no digits
   14 |     print((std::find(2.begin(), 2.end(), xs) != 2.end()));
      |                                                 ^~~~~
../../../tests/machine/x/cpp/in_operator.mochi.cpp:15:36: error: exponent has no digits
   15 |     print((!((std::find(5.begin(), 5.end(), xs) != 5.end()))));
      |                                    ^~~~~
../../../tests/machine/x/cpp/in_operator.mochi.cpp:15:52: error: exponent has no digits
   15 |     print((!((std::find(5.begin(), 5.end(), xs) != 5.end()))));
      |                                                    ^~~~~
../../../tests/machine/x/cpp/in_operator.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/in_operator.mochi.cpp:14:22: error: unable to find numeric literal operator ‘operator""begin’
   14 |     print((std::find(2.begin(), 2.end(), xs) != 2.end()));
      |                      ^~~~~~~
../../../tests/machine/x/cpp/in_operator.mochi.cpp:14:22: note: use ‘-fext-numeric-literals’ to enable more built-in suffixes
../../../tests/machine/x/cpp/in_operator.mochi.cpp:15:25: error: unable to find numeric literal operator ‘operator""begin’
   15 |     print((!((std::find(5.begin(), 5.end(), xs) != 5.end()))));
      |                         ^~~~~~~
../../../tests/machine/x/cpp/in_operator.mochi.cpp:15:25: note: use ‘-fext-numeric-literals’ to enable more built-in suffixes

 13 |     auto xs = std::vector<int>{1, 2, 3};
 14 |     print((std::find(2.begin(), 2.end(), xs) != 2.end()));
 15 |     print((!((std::find(5.begin(), 5.end(), xs) != 5.end()))));
